--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,7 +20,7 @@ h1 {
 }
 
 h2 {
-  margin: 0px 0px 33.5px 0px;
+  margin: 0 0 0.5em;
   font-size: 32px;
   line-height: 36px;
   font-weight: 700;
@@ -59,6 +59,25 @@ a {
     color: $white;
   }
 }
+
+.results {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: space-between;
+}
+
+.result-tile {
+  cursor: pointer;
+  margin-bottom: 2em;
+
+  h2 {
+    text-align: center;
+    font-weight: 200;
+  }
+}
+
+
 
 p {
   margin: 0px 0px 33.5px 0px;
