--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,6 +126,11 @@ strong {
     box-shadow: none;
   }
 
+  &:disabled {
+    opacity: 0.5;
+    color: $light-gray;
+  }
+
   &.blue {
     background-color: $blue;
     color: $white;
